# f1-playground

./: .gitignore  app.py  index.ipynb  pyproject.toml
.github/workflows/: blog.yaml
notebooks/: index.ipynb
src/: chain.py  template.txt  tools.py  visualization.py
